HP DesignJet inkect

--- a/src/compomet/mycssfolter/MyCSSSttyle.css
+++ b/src/compomet/mycssfolter/MyCSSSttyle.css
@@ -15,5 +15,11 @@
     font-weight: bold;
 }
 .StyleYuobe{
-    background-color: red;
+    color: red;
+}
+.StyleFac{
+    color: rgb(74, 25, 237);
+}
+.na:hover {
+  color: rgb(74, 79, 236);
 }
